02-AGIC-Default-Backend/kube-manifests/02-myapp-ClusterIP-Service.yaml
apiVersion: v1
kind: Service
metadata:
  name: myapp-nginx-clusterip-service
  labels:
    app: myapp-nginx
spec:
  type: ClusterIP
  selector:
    app: myapp-nginx
  ports:
    - port: 80
      targetPort: 80
