02-AGIC-Default-Backend/kube-manifests/03-Ingress-Default-Backend.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: myapp-ingress-service
  annotations:
    kubernetes.io/ingress.class: azure/application-gateway  
spec:
  #ingressClassName: azure-application-gateway
  defaultBackend:
    service:
      name: myapp-nginx-clusterip-service
      port: 
        number: 80
